1999-01-10  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* WindowGeometryRecord.[hm] ([WindowGeometryRecord -lispOut:deep:]):
	Add deep: option.

	* ArchivedGeometryWidget.m ([ArchivedGeometryWidget
	-updateArchiver]): Pass (new) deep-serialize option to
	lispArchiverPut.

1999-01-08  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord -lispOut:]): Use
	MAKE_INSTANCE_FUNCTION_NAME instead of MAKE_OBJC_FUNCTION_NAME.

1999-01-06  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Widget.m ([Widget -setParent:]): Check for nil, not 0.
	([Widget -createEnd]): Set shellFrameFlag if parent is nil.
	([Widget -drop]): Use shellFrameFlag to determine if parent
	should be dropped.

	* Widget.h (Widget): New flag shellFrameFlag.

	* Histogram.m ([Histogram +createBegin:]): Initialize numBins
	to 0 instead of -1.
	([Histogram -createEnd]): Make i unsigned.
	([Histogram -setLabels:count:], [Histogram -setColors:count:]):
	Modulus index by {label,color}Count.  Don't check for
	entry of NULL.
	([Histogram -drawHistogramWithInt:], 
	[Histogram -drawHistogramWithDouble:],
	[Histogram -drawHistogramWithInt:atLocations:],
	[Histogram -drawHistogramWithDouble:points:locations]): 
	Make i unsigned.

	* Histogram.h (Histogram): Make numBins unsigned. 

	* Histogram.[hm]: Add count argument to setLabels and setColors.

1998-12-31  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Widget.m ([Widget -drop]): Handle widgets which had shell
	Frames at create time.

1998-12-18  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* ArchivedGeometryWidget.m: Include defobj.h instead of declaring
	archiver interface functions.  Use 
	([ArchivedGeometryWidget -loadWindowGeometryRecord], 
	[ArchivedGeometryWidget -updateArchiver]): Use lispArchiver{Get,Put}
	instead of archiver{Get,Put}.

1998-12-11  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Colormap.m ([Colormap -setColor:ToRed:Green:Blue:]): Revert
	back to #RRGGBB format (for Cygwin Tk).
