@@ -1,3 +1,8 @@
+1999-01-15  Marcus G. Daniels  <mgd@chama.santafe.edu>
+
+	* internal.m (tkobjc_raster_setColormap): Loop until
+	Tk_DoOneEvent goes false.
+
 1999-01-10  Marcus G. Daniels  <mgd@chama.santafe.edu>
 
 	* WindowGeometryRecord.[hm] ([WindowGeometryRecord -lispOut:deep:]):
